--- a/Index.html
+++ b/Index.html
@@ -33,14 +33,14 @@
                 <p id="place">{{info.header.location}}</p>
             </div>
 
-            <button type="button" class="btn btn-lg signUpButton">{{info.header.buttonMessage}}</button>
+            <button type="button" class="btn btn-lg signUpButton" ng-click="gotoRegistration()">{{info.header.buttonMessage}}</button>
         </section>
         <section id="eventDescription" class="row container-fluid text-center">
             <p id="description" class="container">
               {{ info.description}}
             </p>
         </section>
-        <sections id="eventSpeakers" class="row container-fluid text-center">
+        <section id="eventSpeakers" class="row container-fluid text-center">
             <h2 id="titleSchedule">Speakers</h2>
 
             <div id="eventSpeakersContainer" class="container">
@@ -51,7 +51,7 @@
                     <div class="speakerDetail"> {{speaker.description}}</div>
                 </div>
             </div>
-        </sections>
+        </section>
         <section id="eventSchedule" class="row container-fluid text-center">
             <div class="container">
                 <h2 id="titleSchedule">Schedule</h2>
@@ -76,8 +76,41 @@
             <h3>{{info.locationName}}</h3>
             <div id="map" class="text-center"></div>
         </section>
+		<section id="eventRegistration" class="row container-fluid text-center">
+            <h2>Register</h2>
+			<div id="registrationForm">
+				<div ng-show="registration.submitted">
+					<div class="notification success" ng-show="!registration.hasError"><p>Thanks, your registration was successfull!</p></div>
+					<div class="notification error" ng-show="registration.hasError"><p>Error: {{registration.error}}</p></div>
+				</div>
+				<form>
+					<fieldset ng-disabled="registration.submitting">
+						<div class="row">
+							<div class="col-lg-6 col-sm-6">
+								<input type="text" placeholder="Your Name" class="reg-input reg-textbox" ng-model="registration.name" value="">
+							</div>
+							<div class="col-lg-6 col-sm-6">
+								<input type="email" placeholder="Your Email" class="reg-input reg-textbox" ng-model="registration.email" value="">
+							</div>
+						</div>
+						<div class="row">
+							<div class="col-lg-12 col-sm-12">
+								<textarea class="reg-input reg-textarea" placeholder="A little bit about yourself" ng-model="registration.description" value=""></textarea>
+							</div>
+						</div>
+						<div class="row">
+							<div class="col-lg-3 col-sm-3 text-right">
+								<button class="btn btn-lg reg-button" ng-click="register()">Register</button>
+							</div>
+							<!--<div class="col-lg-9 col-sm-9 text-left">
+								[recaptcha]
+							</div>-->					
+						</div>
+					</fieldset>
+				</form>	
+			</div>					
+        </section>
     </div>
-
 </div>
 </body>
 </html>
