Adding navigation bar. Hidden by default, shows when the page is scrolled.

--- a/Index.html
+++ b/Index.html
@@ -26,9 +26,36 @@
 <body>
 <div class="container-fluid text-center row" style="padding:0px;">
     <div ng-app="myApp" ng-controller="myCtrl">
+	    <nav class="navbar navbar-default navbar-fixed-top navbar-hide-show">
+			<div class="container-fluid">
+				<!-- Brand and toggle get grouped for better mobile display -->
+				<div class="navbar-header">
+				<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+					<span class="sr-only">Toggle navigation</span>
+					<span class="icon-bar"></span>
+					<span class="icon-bar"></span>
+					<span class="icon-bar"></span>
+				</button>
+				<a class="navbar-brand" href="#">Brand</a>
+				</div>
+			
+				<!-- Collect the nav links, forms, and other content for toggling -->
+				<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">							
+				<ul class="nav navbar-nav navbar-right">
+				    <li><a ng-click="goToSection('homeAnchor')">{{'homeTitle' | translate}}</a></li>
+					<li><a ng-click="goToSection('descriptionAnchor')">{{'descriptionTitle' | translate}}</a></li>
+					<li><a ng-click="goToSection('speakersAnchor')">{{'speakersTitle' | translate}}</a></li>
+					<li><a ng-click="goToSection('scheduleAnchor')">{{'scheduleTitle' | translate}}</a></li>
+					<li><a ng-click="goToSection('locationAnchor')">{{'locationTitle' | translate}}</a></li>
+					<li><a ng-click="goToSection('faqAnchor')">{{'FAQtitle' | translate }}</a></li>
+					<li><a ng-click="goToSection('registrationAnchor')">{{'registerTitle' | translate}}</a></li>
+				</ul>
+				</div><!-- /.navbar-collapse -->
+			</div><!-- /.container-fluid -->
+		</nav>
         <div id="homeWrapper" class="container-fluid row">
             <section id="eventHome" class="row container">
-
+				<a class="anchor" id="homeAnchor"></a>
                 <ul class="nav nav-pills" id="languageSelection">
 
                     <li ng-repeat="key in translationKeys"
@@ -47,7 +74,7 @@
                     <p id="place" style="font-weight:bold">{{'header.location' | translate}}</p>
                 </div>
 
-                <button type="button" class="btn btn-lg signUpButton" ng-click="goToRegistration()">
+                <button type="button" class="btn btn-lg signUpButton" ng-click="goToSection('eventRegistration')">
                     {{'header.buttonMessage' | translate}}
                 </button>
 
@@ -55,13 +82,15 @@
         </div>
         <div id="descriptionWrapper" class="container-fluid row">
             <section id="eventDescription" class="row text-center container">
-                <p id="description">
+                <a class="anchor" id="descriptionAnchor"></a>
+				<p id="description">
                     {{ 'description' | translate}}
                 </p>
             </section>
         </div>
         <div id="speakersWrapper" class="container-fluid row">
             <section id="eventSpeakers" class="row container text-center">
+			    <a class="anchor" id="speakersAnchor"></a>
                 <div id="eventSpeakersInner" class="fullAuto">
                     <h2 id="titleSchedule">{{'speakersTitle' | translate}}</h2>
 
@@ -80,6 +109,7 @@
         </div>
         <div id="scheduleWrapper" class="container-fluid row">
             <section id="eventSchedule" class="row container text-center">
+				<a class="anchor" id="scheduleAnchor"></a>
                 <div class="container">
                     <h2 id="titleSchedule">{{'scheduleTitle' | translate}}</h2>
                     <ul class="nav nav-pills">
@@ -106,12 +136,14 @@
             </section>
         </div>
         <section id="eventLocation" class="row container-fluid text-center">
+			<a class="anchor" id="locationAnchor"></a>
             <div id="eventLocationTitle" class="container">
                 <h3>{{'locationName' | translate}}</h3>
             </div>
             <div id="map" class="text-center"></div>
         </section>
         <section id="faq" class="row container-fluid text-center">
+			<a class="anchor" id="faqAnchor"></a>
             <h2 class="text-uppercase faq-title">{{'FAQtitle' | translate }}</h2>
 
             <div class="container">
@@ -123,8 +155,9 @@
             </div>
         </section>
         <section id="eventRegistration" class="row container-fluid text-center">
-            <h2>{{'register.title' | translate}}</h2>
-
+			<a class="anchor" id="registrationAnchor"></a>
+            <h2>{{'registerTitle' | translate}}</h2>
+			
             <div id="registrationForm">
                 <div ng-show="registration.submitted">
                     <div class="notification success" ng-show="!registration.hasError"><p>{{'register.successMessage' |
