--- a/Index.html
+++ b/Index.html
@@ -26,7 +26,7 @@
 <body>
 <div class="container-fluid text-center row" style="padding:0px;">
     <div ng-app="myApp" ng-controller="myCtrl">
-	    <nav class="navbar navbar-default navbar-fixed-top navbar-hide-show">
+	    <nav class="navbar navbar-default navbar-fixed-top navbar-hide-show" id="navigation">
 			<div class="container-fluid">
 				<!-- Brand and toggle get grouped for better mobile display -->
 				<div class="navbar-header">
@@ -42,13 +42,13 @@
 				<!-- Collect the nav links, forms, and other content for toggling -->
 				<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">							
 				<ul class="nav navbar-nav navbar-right">
-				    <li><a href="" ng-click="goToSection('homeAnchor')">{{'homeTitle' | translate}}</a></li>
-					<li><a href="" ng-click="goToSection('descriptionAnchor')">{{'descriptionTitle' | translate}}</a></li>
-					<li><a href="" ng-click="goToSection('speakersAnchor')">{{'speakersTitle' | translate}}</a></li>
-					<li><a href="" ng-click="goToSection('scheduleAnchor')">{{'scheduleTitle' | translate}}</a></li>
-					<li><a href="" ng-click="goToSection('locationAnchor')">{{'locationTitle' | translate}}</a></li>
-					<li><a href="" ng-click="goToSection('faqAnchor')">{{'FAQtitle' | translate }}</a></li>
-					<li><a href="" ng-click="goToSection('registrationAnchor')">{{'registerTitle' | translate}}</a></li>
+				    <li><a href="#homeAnchor" ng-click="goToSection('homeAnchor')">{{'homeTitle' | translate}}</a></li>
+					<li><a href="#descriptionAnchor" ng-click="goToSection('descriptionAnchor')">{{'descriptionTitle' | translate}}</a></li>
+					<li><a href="#speakersAnchor" ng-click="goToSection('speakersAnchor')">{{'speakersTitle' | translate}}</a></li>
+					<li><a href="#scheduleAnchor" ng-click="goToSection('scheduleAnchor')">{{'scheduleTitle' | translate}}</a></li>
+					<li><a href="#locationAnchor" ng-click="goToSection('locationAnchor')">{{'locationTitle' | translate}}</a></li>
+					<li><a href="#faqAnchor" ng-click="goToSection('faqAnchor')">{{'FAQtitle' | translate }}</a></li>
+					<li><a href="#registrationAnchor" ng-click="goToSection('registrationAnchor')">{{'registerTitle' | translate}}</a></li>
 				</ul>
 				</div><!-- /.navbar-collapse -->
 			</div><!-- /.container-fluid -->
